--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "type": "module",
   "main": "dist/index.js",
   "files": [
+    "src",
     "dist",
     "README.md",
     "LICENSE"
@@ -49,7 +50,6 @@
     "bun": ">=1.0.0"
   },
   "publishConfig": {
-    "access": "public",
-    "provenance": true
+    "access": "public"
   }
 }
