--- a/package.json
+++ b/package.json
@@ -1,16 +1,55 @@
 {
-  "name": "@spirit-led-software/elisha",
-  "description": "An OpenCode plugin for advanced AI-driven software development assistance.",
+  "name": "@spiritledsoftware/elisha",
   "version": "0.1.0",
+  "description": "An OpenCode plugin for advanced AI-driven software development assistance.",
+  "author": "Spirit-Led Software LLC <social@spiritledsoftware.com>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/spiritledsoftware/elisha.git"
+  },
+  "keywords": [
+    "opencode",
+    "plugin",
+    "ai",
+    "agent",
+    "assistant",
+    "vibe-coding"
+  ],
+  "type": "module",
+  "main": "dist/index.js",
+  "files": [
+    "src",
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "scripts": {
+    "build": "bun build --target=bun --minify --splitting --sourcemap=linked --outdir=dist src/index.ts",
+    "build:watch": "bun run build --watch",
+    "format": "biome format --write",
+    "format:check": "biome format",
+    "lint": "biome lint",
+    "lint:fix": "biome lint --write",
+    "typecheck": "tsc --noEmit",
+    "release": "bun run build && changeset publish"
+  },
   "dependencies": {
     "@opencode-ai/plugin": "1.1.25",
-    "@opencode-ai/sdk": "^1.1.21",
+    "@opencode-ai/sdk": "^1.1.25",
     "dedent": "^1.7.1",
     "defu": "^6.1.4"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.11",
+    "@changesets/cli": "^2.29.8",
     "@types/bun": "^1.3.6",
     "typescript": "^5.9.3"
+  },
+  "engines": {
+    "bun": ">=1.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
