--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "lint": "biome lint",
     "lint:fix": "biome lint --write",
     "typecheck": "tsc --noEmit",
-    "release": "bun run build && changeset publish"
+    "release": "bun run build && changeset publish",
+    "prepare": "husky"
   },
   "dependencies": {
     "@opencode-ai/plugin": "1.1.25",
@@ -44,6 +45,7 @@
     "@biomejs/biome": "^2.3.11",
     "@changesets/cli": "^2.29.8",
     "@types/bun": "^1.3.6",
+    "husky": "^9.1.7",
     "typescript": "^5.9.3"
   },
   "engines": {
