--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "lint": "biome lint",
     "lint:fix": "biome lint --write",
     "typecheck": "tsc --noEmit",
+    "test": "bun test",
+    "test:watch": "bun test --watch",
+    "test:coverage": "bun test --coverage",
     "release": "bun run build && changeset publish",
     "prepare": "husky"
   },
