--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,14 +19,17 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
+      - name: Format check
+        run: bun run format:check
+
       - name: Type check
         run: bun run typecheck
 
       - name: Lint
         run: bun run lint
 
-      - name: Format check
-        run: bun run format:check
-
       - name: Build
         run: bun run build
+
+      - name: Test
+        run: bun run test
