feat: better prompts, protocols, and tests (#7)
* feat: better agent gating and delegation

* feat: agent improvements

* feat: tests, better prompts, protocols

* fix: ci run tests

* chore: changeset

--- a/package.json
+++ b/package.json
@@ -32,13 +32,15 @@
     "lint": "biome lint",
     "lint:fix": "biome lint --write",
     "typecheck": "tsc --noEmit",
+    "test": "bun test",
+    "test:watch": "bun test --watch",
+    "test:coverage": "bun test --coverage",
     "release": "bun run build && changeset publish",
     "prepare": "husky"
   },
   "dependencies": {
     "@opencode-ai/plugin": "1.1.29",
     "@opencode-ai/sdk": "^1.1.29",
-    "dedent": "^1.7.1",
     "defu": "^6.1.4",
     "nanoid": "^5.1.6"
   },
