--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   ],
   "scripts": {
     "build": "bun build --target=bun --minify --splitting --sourcemap=linked --outdir=dist src/index.ts",
-    "build:watch": "bun run build --watch",
+    "build:watch": "bun build --target=bun --sourcemap=linked --outdir=dist --watch src/index.ts",
     "format": "biome format --write",
     "format:check": "biome format",
     "lint": "biome lint",
@@ -39,10 +39,11 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@opencode-ai/plugin": "1.1.29",
-    "@opencode-ai/sdk": "^1.1.29",
+    "@opencode-ai/plugin": "1.1.34",
+    "@opencode-ai/sdk": "^1.1.34",
     "defu": "^6.1.4",
-    "nanoid": "^5.1.6"
+    "nanoid": "^5.1.6",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.11",
@@ -50,6 +51,9 @@
     "@types/bun": "^1.3.6",
     "husky": "^9.1.7",
     "typescript": "^5.9.3"
+  },
+  "overrides": {
+    "zod": "^4.3.6"
   },
   "engines": {
     "bun": ">=1.0.0"
