--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     // Environment setup & latest features
-    "lib": ["ESNext"],
-    "target": "ESNext",
-    "module": "Preserve",
-    "moduleDetection": "force",
+    "lib": ["esnext"],
+    "target": "esnext",
+    "module": "esnext",
+    "moduleDetection": "auto",
     "jsx": "react-jsx",
     "allowJs": true,
 
@@ -28,6 +28,7 @@
 
     "baseUrl": ".",
     "paths": {
+      "~": ["src"],
       "~/*": ["src/*"]
     }
   }
