--- a/package.json
+++ b/package.json
@@ -27,29 +27,34 @@
   "scripts": {
     "build": "bun build --target=bun --minify --splitting --sourcemap=linked --outdir=dist src/index.ts",
     "build:watch": "bun build --target=bun --sourcemap=linked --outdir=dist --watch src/index.ts",
+    "check": "biome check",
+    "check:fix": "biome check --write",
+    "clean": "rm -rf dist",
+    "clean-install": "rimraf bun.lock --glob **/node_modules && bun install",
     "format": "biome format --write",
     "format:check": "biome format",
     "lint": "biome lint",
     "lint:fix": "biome lint --write",
-    "typecheck": "tsc --noEmit",
-    "test": "bun test",
-    "test:watch": "bun test --watch",
-    "test:coverage": "bun test --coverage",
+    "prepare": "husky",
     "release": "bun run build && changeset publish",
-    "prepare": "husky"
+    "test": "bun test",
+    "test:coverage": "bun test --coverage",
+    "test:watch": "bun test --watch",
+    "typecheck": "tsgo"
   },
   "dependencies": {
     "@opencode-ai/plugin": "1.1.34",
     "@opencode-ai/sdk": "^1.1.34",
     "defu": "^6.1.4",
-    "nanoid": "^5.1.6",
     "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.11",
+    "@biomejs/biome": "^2.3.12",
     "@changesets/cli": "^2.29.8",
     "@types/bun": "^1.3.6",
+    "@typescript/native-preview": "^7.0.0-dev.20260124.1",
     "husky": "^9.1.7",
+    "rimraf": "^6.1.2",
     "typescript": "^5.9.3"
   },
   "overrides": {
