--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,10 +26,9 @@
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false,
 
-    "baseUrl": ".",
     "paths": {
-      "~": ["src"],
-      "~/*": ["src/*"]
+      "~": ["./src"],
+      "~/*": ["./src/*"]
     }
   }
 }
