--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,14 +58,33 @@ jobs:
         if: steps.changesets.outputs.has_changesets == 'true'
         run: bunx changeset version
 
+      - name: Get version
+        if: steps.changesets.outputs.has_changesets == 'true'
+        id: version
+        run: echo "version=$(jq -r .version package.json)" >> $GITHUB_OUTPUT
+
       - name: Commit and push version changes
         if: steps.changesets.outputs.has_changesets == 'true'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add -A
-          git commit -m "chore: release"
+          git commit -m "chore(release): v${{ steps.version.outputs.version }}"
           git push
+
+      - name: Pack plugin
+        if: steps.changesets.outputs.has_changesets == 'true'
+        run: tar -czvf elisha-v${{ steps.version.outputs.version }}.tar.gz dist/ README.md LICENSE
+
+      - name: Create GitHub Release
+        if: steps.changesets.outputs.has_changesets == 'true'
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: v${{ steps.version.outputs.version }}
+          name: v${{ steps.version.outputs.version }}
+          generate_release_notes: true
+          files: |
+            *.tar.gz
 
       # Uses npm Trusted Publishers (OIDC) - no token needed
       # Requires Trusted Publishers configured on npmjs.com for this repo
