--- a/package.json
+++ b/package.json
@@ -19,14 +19,13 @@
   "type": "module",
   "main": "dist/index.js",
   "files": [
-    "src",
     "dist",
     "README.md",
     "LICENSE"
   ],
   "scripts": {
-    "build": "bun build --target=bun --minify --splitting --sourcemap=linked --outdir=dist src/index.ts",
-    "build:watch": "bun build --target=bun --sourcemap=linked --outdir=dist --watch src/index.ts",
+    "build": "tsgo && bun build --target=bun --minify --sourcemap=linked --outdir=dist src/index.ts",
+    "build:watch": "concurrently \"bun run typecheck:watch\" \"bun build --target=bun --sourcemap=linked --outdir=dist --watch ./src/index.ts\"",
     "check": "biome check",
     "check:fix": "biome check --write",
     "clean": "rm -rf dist",
@@ -40,7 +39,8 @@
     "test": "bun test",
     "test:coverage": "bun test --coverage",
     "test:watch": "bun test --watch",
-    "typecheck": "tsgo"
+    "typecheck": "tsgo",
+    "typecheck:watch": "tsgo --watch"
   },
   "dependencies": {
     "@opencode-ai/plugin": "1.1.34",
@@ -53,6 +53,8 @@
     "@changesets/cli": "^2.29.8",
     "@types/bun": "^1.3.6",
     "@typescript/native-preview": "^7.0.0-dev.20260124.1",
+    "bun": "^1.3.6",
+    "concurrently": "^9.2.1",
     "husky": "^9.1.7",
     "rimraf": "^6.1.2",
     "typescript": "^5.9.3"
