--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "tsgo && bun build --target=bun --minify --sourcemap=linked --outdir=dist src/index.ts",
-    "build:watch": "concurrently \"bun run typecheck:watch\" \"bun build --target=bun --sourcemap=linked --outdir=dist --watch ./src/index.ts\"",
+    "build": "bun run typecheck && bun build --target=bun --minify --sourcemap=linked --outdir=dist src/index.ts",
+    "build:watch": "concurrently \"bun run typecheck:watch\" \"bun build --target=bun --sourcemap=linked --outdir=dist --watch src/index.ts\"",
     "check": "biome check",
     "check:fix": "biome check --write",
-    "clean": "rm -rf dist",
+    "clean": "rimraf dist",
     "clean-install": "rimraf bun.lock --glob **/node_modules && bun install",
     "format": "biome format --write",
     "format:check": "biome format",
@@ -37,7 +37,6 @@
     "prepare": "husky",
     "release": "bun run build && changeset publish",
     "test": "bun test",
-    "test:coverage": "bun test --coverage",
     "test:watch": "bun test --watch",
     "typecheck": "tsgo",
     "typecheck:watch": "tsgo --watch"
@@ -53,7 +52,6 @@
     "@changesets/cli": "^2.29.8",
     "@types/bun": "^1.3.6",
     "@typescript/native-preview": "^7.0.0-dev.20260124.1",
-    "bun": "^1.3.6",
     "concurrently": "^9.2.1",
     "husky": "^9.1.7",
     "rimraf": "^6.1.2",
